--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "mongoose": "^6.2.3"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
