--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.15.1",
+    "npm" : "8.5.3"
+  },
   "dependencies": {
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
