--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "engines": {
     "node": "14.15.1",
-    "npm" : "8.5.3"
+    "npm": "8.5.3"
   },
   "dependencies": {
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.2.3"
   },
   "scripts": {
